# sprout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mise.toml  tarpaulin-report.html
.cursor/rules/: global.mdc
.github/deactivated/: release.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecards.yml
.roo/rules-code/: rules.md
docs/: PRD.md  RELEASING.md  SECURITY.md  TASKS.md  digest.txt
scripts/: README.md  install.ps1  sign_releases.py
src/: bundler.rs  main.rs  parser.rs
tests/: integration_tests.rs
